# FinanceApi

./: README.md  currency_parser.py  database.py  docker-compose.yml  main.py  pyproject.toml
crud/: operation_crud.py  user_crud.py
models/: operation_schema.py  operations.py  user_schema.py  users.py
routers/: operation_router.py  user_router.py
